<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
	android:fillViewport="true"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:padding="5sp">
  
	<RelativeLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:orientation="vertical"
	  android:id="@+id/tokenAddStep1"
	  android:paddingBottom="20dp"
		android:paddingLeft="15dp"
		android:paddingRight="15dp"
	  >
	  
	  
	<TextView
			android:id="@+id/tokenType"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tokenType"
			android:layout_alignParentTop="true"
			android:layout_marginTop="10dp"
			>
	</TextView>
	<Spinner
			android:id="@+id/tokenTypeSpinner"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/tokenTypeSpinnerPrompt"
			android:layout_below="@id/tokenType"
	>
	</Spinner>

	<TextView
		android:id="@+id/tokenOrganisation"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/tokenOrganisation"
		android:layout_below="@id/tokenTypeSpinner"
		android:layout_marginTop="20dp"
		>
	</TextView>
	<EditText
		android:id="@+id/tokenOrganisationEdit"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="18sp"
		android:layout_below="@id/tokenOrganisation"
		>
	</EditText>

	<TextView
			android:id="@+id/tokenName"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tokenName"
			android:layout_below="@id/tokenOrganisationEdit"
			android:layout_marginTop="20dp"
	>
	</TextView>
	<EditText
			android:id="@+id/tokenNameEdit"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="18sp"
		android:layout_below="@id/tokenName"
		>
	</EditText>

	<TextView
		android:id="@+id/tokenSerial"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/tokenSerial"
		android:layout_below="@id/tokenNameEdit"
		android:layout_marginTop="20dp"
		>
	</TextView>
	<EditText
	    android:id="@+id/tokenSerialEdit"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text"
	    android:textSize="18sp"
		android:layout_below="@id/tokenSerial">
	</EditText>
	  
	<TextView android:text="@string/tokenOtp" 
			  android:id="@+id/tokenOtp" 
			  android:layout_width="wrap_content" 
			  android:layout_height="wrap_content"
		      android:layout_below="@id/tokenSerialEdit"
			  android:layout_marginTop="20dp"></TextView>
	
	<Spinner android:id="@+id/tokenOtpSpinner" 
			 android:layout_width="wrap_content" 
			 android:layout_height="wrap_content"
			 android:prompt="@string/tokenOtpSpinnerPrompt"
		     android:layout_below="@id/tokenOtp"></Spinner>
			 
	<TextView android:text="@string/tokenTimeStep" 
		      android:id="@+id/tokenTimeStep" 
		      android:layout_width="wrap_content" 
		      android:layout_height="wrap_content"
		      android:visibility="invisible"
		      android:layout_below="@id/tokenSerialEdit"
		      android:layout_toRightOf="@id/tokenOtp"
			  android:layout_marginLeft="40dp"
		      android:layout_marginTop="20dp">
				</TextView>
		      
	<Spinner android:id="@+id/tokenTimeStepSpinner" 
			 android:layout_width="wrap_content" 
			 android:layout_height="wrap_content"
			 android:prompt="@string/tokenTimeStepSpinnerPrompt"
			 android:visibility="invisible"
		     android:layout_below="@id/tokenTimeStep"
			 android:layout_toRightOf="@id/tokenOtpSpinner"
			 android:layout_marginLeft="40dp"/>
			 
	<Button android:text="@string/btnAddStep2" 
			android:id="@+id/btnAddStep2" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:layout_marginRight="20dp"
		></Button>
			
	</RelativeLayout>
	
	
	<RelativeLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:orientation="vertical"
	  android:id="@+id/tokenAddStep2"
	  android:visibility="gone"
	  android:paddingBottom="20dp"
	  android:paddingLeft="15dp"
	  android:paddingRight="15dp">
	
		<TextView
			android:text="@string/tokenSeedMethod"
			android:id="@+id/tokenSeedMethod"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_marginTop="10dp"></TextView>

		<RadioGroup
			android:id="@+id/radioGroupSeed"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_below="@id/tokenSeedMethod">

			<RadioButton android:text="@string/rbSeedManual" android:checked="true" android:id="@+id/rbSeedManual" android:layout_width="wrap_content" android:layout_height="wrap_content"></RadioButton>
			<RadioButton android:text="@string/rbSeedRandom" android:id="@+id/rbSeedRandom" android:layout_width="wrap_content" android:layout_height="wrap_content"></RadioButton>
			<RadioButton android:text="@string/rbSeedPassword" android:id="@+id/rbSeedPassword" android:layout_width="wrap_content" android:layout_height="wrap_content"></RadioButton>

		</RadioGroup>
	
		<TextView
			android:text="@string/tokenSeed"
			android:id="@+id/tokenSeed"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_below="@id/radioGroupSeed"></TextView>
		<EditText
			android:id="@+id/tokenSeedEdit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/tokenSeed"></EditText>

		<Spinner
			android:id="@+id/tokenSeedFormat"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/tokenSeedFormat"
			android:layout_below="@id/tokenSeedEdit"/>

		<Button
			android:text="@string/tokenAddComplete"
			android:id="@+id/tokenAddComplete"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:layout_marginRight="20dp"></Button>

	</RelativeLayout>


</LinearLayout>

</ScrollView>
