<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:visibility="visible">


    <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainList"
    android:visibility="gone">    
	    <ListView android:id="@+id/android:list"  
	    			android:layout_width="fill_parent" 
	    			android:layout_height="wrap_content">
	    </ListView>
	    
		<TextView  
			android:id="@+id/android:empty"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/noTokens"
			android:gravity="center"
			android:layout_marginTop="30dp"
		    />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/mainPin"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="5sp"
		android:visibility="gone">

		<TextView
			android:id="@+id/mainPinText"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5sp"
			android:text="@string/pinChangeExistingPin"
			android:textSize="20dip" />

		<EditText
			android:id="@+id/mainPinEdit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dip"
			android:inputType="number"
			android:password="true"
			android:textSize="18sp" />

		<Button
			android:id="@+id/mainLogin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10sp"
			android:text="@string/mainLogin"></Button>
	</LinearLayout>
    		    
</RelativeLayout>
